# CrabUSB

./: .gitignore  Cargo.toml  README.md  bare-test.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: test.yml
src/: _macros.rs  err.rs  lib.rs  sync.rs  wait.rs
src/abstractions/: dma.rs  mod.rs
src/driver/: driverapi.rs  mod.rs
src/event/: mod.rs
src/host/: mod.rs
src/host/controllers/: controller_events.rs  mod.rs
src/host/controllers/xhci/: context.rs  event_ring.rs  inner_urb.rs  mod.rs  ring.rs
src/host/device/: mod.rs
src/host/xhci/: context.rs  def.rs  device.rs  endpoint.rs  event.rs  host.rs  interface.rs  mod.rs  reg.rs  ring.rs  root.rs
src/host/xhci/ring/: cmd.rs  mod.rs  trans.rs
src/standard/: mod.rs
src/standard/descriptors/: mod.rs  parser.rs
src/standard/trans/: control.rs
src/standard/transfer/: control.rs  mod.rs
src/usb/: functional_interface.rs  mod.rs  standards.rs
src/usb/operations/: bulk.rs  configurations.rs  control.rs  interrupt.rs  isoch.rs  mod.rs
test_crates/test_libusb/: Cargo.toml
test_crates/test_libusb/tests/: test.rs
tests/: test.rs
usb-device/hid/keyboard/: Cargo.toml
usb-device/hid/keyboard/examples/: keyboard.rs
usb-device/hid/keyboard/src/: lib.rs
usb-device/hid/keyboard/tests/: test.rs
usb-device/uvc/: Cargo.toml  README.md
usb-device/uvc/examples/: capture_video.rs  simple_streaming_test.rs
usb-device/uvc/src/: descriptors.rs  frame.rs  lib.rs  stream.rs
usb-device/uvc/tests/: basic_tests.rs  integration_tests.rs
usb-host/: CHANGELOG.md  Cargo.toml  README.md  bare-test.toml  test_isoch.rs
usb-host/src/: err.rs  lib.rs  wait.rs
usb-host/src/host/: mod.rs
usb-host/src/host/common/: mod.rs
usb-host/src/host/libusb/: context.rs  device.rs  endpoint.rs  interface.rs  mod.rs  queue.rs
usb-host/src/host/xhci/: context.rs  device.rs  endpoint.rs  event.rs  interface.rs  mod.rs  root.rs
usb-host/src/host/xhci/ring/: mod.rs
usb-host/src/standard/: mod.rs
usb-host/src/standard/transfer/: control.rs  mod.rs
usb-host/tests/: test.rs
usb-if/: CHANGELOG.md  Cargo.toml
usb-if/src/: err.rs  lib.rs
usb-if/src/descriptor/: mod.rs  parser.rs
usb-if/src/host/: mod.rs
usb-if/src/transfer/: mod.rs  wait.rs
utils/uvc-frame-parser/: Cargo.toml
utils/uvc-frame-parser/src/: lib.rs
