[package]
authors = ["周睿 <zrufo747@outlook.com>", "dbydd <dbydd@outlook.com>"]
categories = ["embedded", "no-std"]
description = "A usb host for embedded systems, written in Rust."
edition = "2024"
keywords = ["os", "usb", "xhci", "driver"]
license = "MIT"
name = "crab-usb"
repository = "https://github.com/drivercraft/CrabUSB"
version = "0.1.3"

[dependencies]
bitflags = "2.8"
crossbeam = {version = "0.8", features = ["alloc"], default-features = false}
crossbeam-skiplist = {version = "0.1", features = [
  "alloc",
], default-features = false}
dma-api = {version = "0.4", features = ["alloc"]}
futures = {version = "0.3", features = ["alloc"], default-features = false}
log = "0.4"
mbarrier = "0.1"
nb = "1.1"
num_enum = {version = "0.7", default-features = false}
spin = {version = "0.10"}
thiserror = {version = "2", default-features = false}
tock-registers = "0.10"
xhci = "0.9"

[dev-dependencies]
bare-test = "0.5"
byte-unit = {version = "5.1.6", default-features = false, features = ["byte"]}
pcie = "0.2"
spin_on = "0.1.1"

[build-dependencies]
bare-test-macros = "0.2"

[[test]]
harness = false
name = "test"
