[workspace]
members = ["test_crates/*", "usb-host", "usb-if"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/drivercraft/CrabUSB"

[workspace.dependencies]
crab-usb = {path = "usb-host", version = "0.1"}
futures = {version = "0.3", default-features = false}
log = "0.4"
thiserror = {version = "2", default-features = false}
usb-if = {path = "usb-if", version = "0.1"}
