[package]
description = "USB Interface definitions for CrabUSB"
edition.workspace = true
license.workspace = true
name = "usb-if"
repository.workspace = true
version = "0.1.1"

[dependencies]
futures = {workspace = true, features = ["alloc"]}
log = {workspace = true}
num_enum = {version = "0.7", default-features = false}
thiserror = {workspace = true}
spin = "0.10"
