[package]
edition.workspace = true
license.workspace = true
name = "usb-uvc"
publish = false
repository.workspace = true
version = "0.1.0"

[dependencies]
crab-usb = {workspace = true, features = ["libusb"]}
log = "0.4"
usb-if = {workspace = true}

[dev-dependencies]
env_logger = "0.11"
image = "0.24"
tokio = {version = "1", features = ["full"]}
ffmpeg-next = "7.1.0"
