[package]
name = "keyboard"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
crab-usb = {workspace = true, features = ["libusb"]}
log = "0.4"


[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }